feat: remove picture id from comment delete url
